--- a/hector_quadrotor/hector_quadrotor_model/package.xml
+++ b/hector_quadrotor/hector_quadrotor_model/package.xml
@@ -18,7 +18,7 @@
   <!-- Dependencies needed to compile this package. -->
   <build_depend>geometry_msgs</build_depend>
   <build_depend>hector_uav_msgs</build_depend>
-  <build_depend>eigen</build_depend>
+  <build_depend>eigen3</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>boost</build_depend>
